# lightray

./: .gitignore  README.md  Thumbs.db
LightRay/: lightray.cabal
LightRay/src/: Camera.hs  GeometricShape.hs  Main.hs
LightRay/src/Lightray/: Camera.hs  GeometricShape.hs  Ray.hs  World.hs
raytracer/: raytracer.cabal
raytracer/src/: Camera.hs  Main.hs  Object.hs  Ray.hs  Rays.hs  Shapes.hs  World.hs
src/: Main.hs  Scene.json
src/Lightray/: Intersection.hs  Render.hs  SceneBuilder.hs
src/Lightray/Types/: Camera.hs  GeometricShape.hs  Ray.hs  World.hs
