name:                raytracer
version:             0.1.0.0
synopsis:            A lightweight raytracer
description:         Please see README.md
homepage:            http://github.com/githubuser/raytracer#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Dao
maintainer:          alan.n.dao@gmail.com
copyright:           2015 Alan Dao
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable raytracer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       lens,
                       linear
